# bsaseq

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
paper/: paper.bib  paper.md
paper/biorxiv/: paper_biorxiv.md
paper/figures/: figure1.md
recipes/bioconda/: README.md  meta.yaml
src/bsaseq/: __init__.py  __main__.py  cli.py
src/bsaseq.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/bsaseq/analysis/: __init__.py  candidates.py  windows.py
src/bsaseq/annotation/: __init__.py  snpeff.py
src/bsaseq/core/: __init__.py  models.py  stats.py
src/bsaseq/io/: __init__.py  readers.py  summary.py  vcf.py  writers.py
src/bsaseq/plotting/: __init__.py  diagnostics.py  genome.py  style.py
src/bsaseq/utils/: __init__.py  errors.py  logging.py  sorting.py  validation.py
tests/: __init__.py  conftest.py  test_annotation.py  test_candidates.py  test_cli.py  test_integration.py  test_plotting.py  test_validation.py  test_vcf.py  test_windows.py
tests/data/: multi_sample.vcf  test.vcf
workflows/nextflow/: README.md  main.nf  nextflow.config
workflows/snakemake/: README.md  Snakefile  config.yaml  environment.yaml
