[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bsaseq"
version = "1.0.0"
description = "Bulk Segregant Analysis for QTL mapping from pooled whole-genome sequencing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9,<3.14"
authors = [
    {name = "BSAseq Authors", email = "bsaseq@example.com"},
]
maintainers = [
    {name = "BSAseq Authors", email = "bsaseq@example.com"},
]
keywords = [
    "bioinformatics",
    "genomics",
    "QTL",
    "bulk-segregant-analysis",
    "BSA",
    "variant-analysis",
    "genetics",
    "sequencing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
dependencies = [
    "cyvcf2>=0.30.0",
    "numpy>=1.21.0",
    "pandas>=1.4.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "click>=8.0.0",
    "rich>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pandas-stubs",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "sphinx-click>=4.4.0",
    "myst-parser>=1.0.0",
]

[project.scripts]
bsaseq = "bsaseq.cli:cli"

[project.urls]
Homepage = "https://github.com/username/bsaseq"
Documentation = "https://bsaseq.readthedocs.io"
Repository = "https://github.com/username/bsaseq"
Issues = "https://github.com/username/bsaseq/issues"
Changelog = "https://github.com/username/bsaseq/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bsaseq"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/bsaseq"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
